# python-ads-client

./: .gitignore  README.md  main.py  pyproject.toml  testserver.py
.github/workflows/: coverage-report.yml  pytest-app.yml
config/: ads_targets.yaml  logging.yaml
config/default/: logging-default.yaml
src/ads_client/: __init__.py  ads_client.py  ads_connection.py  ads_connection_labview.py  ads_target.py  constants.py
tests/: conftest.py  test_ads_client.py  test_ads_connection_labview.py  test_ads_target.py  test_ads_target_live.py  test_ads_testserver.py  utils.py
